# topological-quantum-compiling

./: .gitignore  README.md  __main__.py  anyons.py  exactUnitary.py  numberTheory.py  prec.py  print.py  pyproject.toml  rings.py  rings_mp.py  ruff.toml  solovay_kitaev.py  synthesis.py  unittest.py  unittests.py  util.py
exact_synthesis/: exactUnitary.py  numberTheory.py  prec.py  rings.py  synthesis.py  util.py
examples/: example_z.py  multiqbit.ipynb  z_synthesis.ipynb
latex/: braid_diagram.tex
src/: _multi_qubit_test.py  _transpiler.py
src/exact_synthesis/: exactUnitary.py  numberTheory.py  prec.py  rings.py  synthesis.py  util.py
src/single_qubit/: _transpiler.py  gates.py
src/single_qubit/exact_synthesis/: exactUnitary.py  numberTheory.py  prec.py  rings.py  synthesis.py  util.py
tests/: epsilon-region-test.py  unittests.py
