[project]
name = "exact-synthesis-py"
version = "0.1.0"
description = "Quantum synthesis toolkit for fibonacci anyons"

dependencies = [
  "mpmath>=1.3.0",
  "sympy>=1.12",
  "pytest>=7.4",
]
readme = "README.md"
requires-python = ">=3.9"

[tool.uv]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]