[project]
name = "exact-synthesis-py"
version = "0.1.0"
description = "Quantum synthesis toolkit for fibonacci anyons"

dependencies = [
  "mpmath>=1.3.0",
  "sympy>=1.12",
  "pytest>=7.4",
  "pyzx>=0.9.0",
]
readme = "README.md"
requires-python = ">=3.9"

[tool.uv]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]


[tool.ruff]
indent-width = 2
preview = true
line-length = 150
target-version = "py312"
