[project]
name = "exact_synthesis"
version = "0.1.0"
description = "Quantum synthesis toolkit for fibonacci anyons"

dependencies = [
  "mpmath>=1.3.0",
  "sympy>=1.12",
  "pyzx>=0.9.0"
]


readme = "README.md"
requires-python = ">=3.9"

[project.optional-dependencies]
test = [
  "pytest>=7.4",
  "scipy>=1.11",
]
dev = [
  "ipykernel>=6.29.5"
]



[tool.setuptools]
packages = ["exact_synthesis"]


[tool.uv]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[dependency-groups]
dev = ["ipykernel>=6.29.5"]